Tests: Add functional tests for the new Apache Ignite feature (#141)